| Summary: | ASTERISK-27318: res_pjsip_mwi: uninitialized value from ast_strings_match | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | pjsip |
| Date Opened: | 2017-10-05 12:24:33 | Date Closed: | 2017-10-06 05:24:28 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/Configuration |
| Versions: | 13.17.2 14.6.2 GIT 15.0.0-rc1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | ast_strings_match uses sscanf and checks for non-zero return to verify a token was parsed. This is incorrect as sscanf returns {{EOF}} (-1) for errors. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-10-05 12:24:34.177-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2017-10-06 05:24:29.281-0500 Change 6668 merged by Jenkins2: main/strings: Fix uninitialized value. [https://gerrit.asterisk.org/6668|https://gerrit.asterisk.org/6668] By: Friendly Automation (friendly-automation) 2017-10-06 05:27:36.080-0500 Change 6667 merged by Jenkins2: main/strings: Fix uninitialized value. [https://gerrit.asterisk.org/6667|https://gerrit.asterisk.org/6667] By: Friendly Automation (friendly-automation) 2017-10-06 06:52:06.857-0500 Change 6665 merged by Jenkins2: main/strings: Fix uninitialized value. [https://gerrit.asterisk.org/6665|https://gerrit.asterisk.org/6665] By: Friendly Automation (friendly-automation) 2017-10-06 07:12:43.727-0500 Change 6666 merged by George Joseph: main/strings: Fix uninitialized value. [https://gerrit.asterisk.org/6666|https://gerrit.asterisk.org/6666] | ||